kubectl_deploy/dev/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: moj-s3-virus-scan
  namespace: moj-s3-virus-scan-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: moj-s3-virus-scan
    spec:
      containers:
      - name: moj-s3-virus-scan
        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/correspondence/moj-s3-virus-scan:latest
        ports:
        - containerPort: 4567
