kubectl_deploy/dev/oidc-proxy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viruscan-proxy
  namespace: moj-s3-virus-scan-dev
spec:
  rules:
  - host: proxy-moj-s3-virus-scan-dev.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - backend:
          serviceName: viruscan-proxy
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: viruscan-proxy
  name: viruscan-proxy
  namespace: moj-s3-virus-scan-dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: viruscan-proxy

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: viruscan-proxy
  name: viruscan-proxy
  namespace: moj-s3-virus-scan-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: viruscan-proxy
  template:
    metadata:
      labels:
        k8s-app: viruscan-proxy
    spec:
      containers:
      - name: viruscan-proxy
        image: evry/oidc-proxy:v1.2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/local/openresty/nginx/conf/sites/
        - name: auth-script
          mountPath: /usr/local/openresty/nginx/lua
      volumes:
      - name: config
        configMap:
          name: viruscan-proxy-config
      - name: auth-script
        configMap:
          name: viruscan-proxy-auth-script
